--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -32,34 +32,83 @@
 апробация на частных примерах: \dots  и~\dots.
 
 
-\underline{\textbf{Первая глава}} посвящена \dots
+\underline{\textbf{Первая глава}} посвящена %\dots
+Математическим основам построения алгоритмов оценки параметров гармоник:
+\begin{itemize}
+\item Особенности сигналов в электрических сетях носят не существенный характер с точки зрения построения алгоритмов нахождения параметров гармоник. При работе с электрическими сетями обычно используют стандартные алгоритмы такого рода.
+\item Помимо обычных алгоритмов для оценки параметров гармоник в электрических сетях также используют алгоритмы, анализирующие сигналы в переходных режимах, т.~е. такие, в которых во время работы алгоритма может измениться значение какого-либо параметра. В нашей работе такие алгоритмы далее рассматриваться не будут, поскольку переходные режимы не являются целью нашей работы.
+\item Анализ имеющихся библиографических источников показывает, что нет известных публикаций в которых бы велась разработка алгоритмов, ориентированных на работу при определенном соотношении сигнал-шум, и что для анализа гармоник и интергармоник (для которых это соотношение отличается) применяются одинаковые алгоритмы.
+\item Алгоритмы оценки параметров гармоник, применяемые при работе с однотональными и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Вопрос о причинах снижения точности и возможности построения алгоритма, достигающего этой границы в известных научных публикациях не рассмотрен.
+\item Для решения задачи построения оптимального алгоритма для анализа спектра сигнала в электрических сетях необходимо уточнение математической модели спектра сигналов в части, описывающей точность оценки (дисперсию) параметров гармоник спектра многотонального сигнала.
+\end{itemize}
 
- картинку можно добавить так:
-\begin{figure}[ht]
-  \centerfloat{
-    \includegraphics[scale=0.27]{latex}
-  }
-  \caption{Подпись к картинке.}\label{fig:latex}
-\end{figure}
 
-Формулы в строку без номера добавляются так:
-\[
-  \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
-  \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
-\]
+% картинку можно добавить так:
+%\begin{figure}[ht]
+%  \centerfloat{
+%    \includegraphics[scale=0.27]{latex}
+%  }
+%  \caption{Подпись к картинке.}\label{fig:latex}
+%\end{figure}
+%
+%Формулы в строку без номера добавляются так:
+%\[
+%  \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
+%  \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
+%\]
 
-\underline{\textbf{Вторая глава}} посвящена исследованию
+\underline{\textbf{Вторая глава}} посвящена математическим основам построения алгоритмов оценки параметров гармоник:
 
-\underline{\textbf{Третья глава}} посвящена исследованию
+\begin{itemize}
+\item Математической основой для анализа спектра сигналов является преобразование Фурье. Для дискретных сигналов применяется дискретное преобразование Фурье.
 
-Можно сослаться на свои работы в автореферате. Для этого в файле
-\verb!Synopsis/setup.tex! необходимо присвоить положительное значение
-счётчику \verb!\setcounter{usefootcite}{1}!. В таком случае ссылки на
-работы других авторов будут подстрочными.
-Изложенные в третьей главе результаты опубликованы в~\cite{vakbib1, vakbib2}.
-Использование подстрочных ссылок внутри таблиц может вызывать проблемы.
+\item При анализе спектра многотонального сигнала с помощью дискретного преобразования Фурье в большинстве случаев имеются гармоники частота которых не кратна частоте основной гармоники. При оценке их параметров необходимо учитывать изменение спектра сигнала, связанное с ограниченной длиной выборки этого сигнала.
 
-В \underline{\textbf{четвертой главе}} приведено описание
+\item При анализе спектра сигнала с ограниченной выборкой необходимо использовать оконные функции, поскольку в противном случае сигнал будет взвешен прямоугольной оконной функцией с плохой частотной характеристикой.
+
+\item Применение оконной функции уменьшает количество информации, получаемое из сигнала, и, как следствие, увеличивается дисперсия оценки параметров сигнала, или, другими словами, ухудшается точность оценки параметров сигналов.
+
+\item Ухудшение точности оценки можно определить исходя из предложенного в главе коэффициента окна. Данный коэффициент показывает, насколько уменьшиться точность оценки амплитуды гармоники для оптимальной несмещенной оценки при применении такого окна, а также может использоваться для оценки снижения точности параметров.
+
+\item Алгоритмы для нахождения оптимальной несмещенной оценки параметров могут быть построены на основе методов оптимального приема, изучаемых в радиотехники, в частости, с помощью корреляционного анализа.
+\end{itemize}
+
+\underline{\textbf{Третья глава}} посвящена исследованию численных методов для нахождение оптимальной несмещенной оценки параметров гармоник:
+
+\begin{itemize}
+
+\item Методы, основанные на интерполировании смежных гармоник, позволяют достичь высокой точности, во многих случаях достаточной для практического применения, однако они не позволяют достичь точности оптимальной несмещенной оценки.
+
+\item Можно выделить два подхода к построению алгоритмов на основе корреляционного анализа: использование итерационного процесса для нахождения частоты, амплитуды и фазы каждой гармоники и использование техники дополнения нулями сигнала с целью уплотнения гармоник в спектре сигнала. Оба метода требуют существенно больших вычислительных ресурсов, чем методы основанные на интерполировании, но обеспечивают оптимальную несмещенную оценку.
+
+\item Время расчета параметров гармоник многотонального сигнала с помощью техники дополнения нулями может быть существенно снижено за счет применения разряженного быстрого преобразования Фурье.
+
+\item Реализация итерационного оптимизационного метода нахождения гармоник на основе чисел Фиббоначи при небольшом числе обсчитываемых гармоник обеспечивает быстродействие, близкое к итерационным методам.
+
+\item Реализация метода дополнение нулями сигнала при использовании разряженного преобразования Фурье имеет быстродействие менее чем на порядок худшее, чем итерационные методы, при этом быстродействие не зависит от числа обсчитываемых гармоник. Также нужно отметить больший объем памяти, требуемый для этого метода, который при этом не является критичным для современных вычислительных устройств.
+\end{itemize}
+
+%Можно сослаться на свои работы в автореферате. Для этого в файле
+%\verb!Synopsis/setup.tex! необходимо присвоить положительное значение
+%счётчику \verb!\setcounter{usefootcite}{1}!. В таком случае ссылки на
+%работы других авторов будут подстрочными.
+%Изложенные в третьей главе результаты опубликованы в~\cite{vakbib1, vakbib2}.
+%Использование подстрочных ссылок внутри таблиц может вызывать проблемы.
+
+В \underline{\textbf{четвертой главе}} приведено описание применения алгоритмов оценки параметров многотональных сигналов для анализа гармоник и интергармоник в электрических сетях на железнодорожном транспорте:
+
+\begin{itemize}
+
+\item В современных стандартах по анализу спектра в электрических сетях большее внимание уделяется нахождению интергармонических составляющих. Поскольку интергармонические составляющие имеют малую энергию по отношению к другим гармоникам и шуму, к алгоритмам для нахождения параметров гармоник возрастают требования по точности определения амплитуды в условиях высокого шума.
+
+\item В стандартах также указывается требования о нахождение всех гармоник по 40 включительно, что, вместе с требованием о нахождении интеграмоник приводит к большому числу анализируемых гармонических составляющих сигнала.
+
+\item Исходя из требований стандарта и анализа свойств изученных алгоритмов для анализа спектра сигнала в силовых электрических сетях железнодорожного транспорта рекомендуется использование метода дополнения сигнала нулями с применением разряженного преобразования Фурье.
+
+\item Время расчета спектра реального сигнала этим методом на современном компьютере начального уровня составляет единицы секунд, что позволяет говорить о его приемлемом быстродействии для решения практических задач.
+\end{itemize}
+
+
 
 В \underline{\textbf{заключении}} приведены основные результаты работы, которые заключаются в следующем:
 \input{common/concl}
