--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -3,11 +3,12 @@
 \noindent%
 \begin{tabularx}{\textwidth}{@{}lXr@{}}%
     & & \large{На правах рукописи}\\
-    \IfFileExists{images/logo.pdf}{\includegraphics[height=2.5cm]{logo}}{\rule[0pt]{0pt}{2.5cm}}  & &
+    \IfFileExists{images/logo.pdf}{\includegraphics[height=2.5cm]{omgups}}{\rule[0pt]{0pt}{2.5cm}}  & &
     \ifnumequal{\value{showperssign}}{0}{%
         \rule[0pt]{0pt}{1.5cm}
     }{
-        \includegraphics[height=1.5cm]{personal-signature.png}
+        %\includegraphics[height=1.5cm]{personal-signature.png}
+        \includegraphics[height=1.5cm]{signature.jpg}
     }\\
 \end{tabularx}
 
@@ -102,7 +103,7 @@
 \noindent Защита состоится \defenseDate~на~заседании диссертационного совета \defenseCouncilNumber~при \defenseCouncilTitle~по адресу: \defenseCouncilAddress.
 
 \vspace{0.008\paperheight plus1fill}
-\noindent С диссертацией можно ознакомиться в библиотеке \synopsisLibrary.
+\noindent С диссертацией можно ознакомиться в библиотеке \synopsisLibrary и на сайте по ссылке: 
 
 \vspace{0.008\paperheight plus1fill}
 \noindent Отзывы на автореферат в двух экземплярах, заверенные печатью учреждения, просьба направлять по адресу: \defenseCouncilAddress, ученому секретарю диссертационного совета~\defenseCouncilNumber.
@@ -110,7 +111,7 @@
 \vspace{0.008\paperheight plus1fill}
 \noindent{Автореферат разослан \synopsisDate.}
 
-\noindent Телефон для справок: \defenseCouncilPhone.
+\noindent Телефон для справок: \defenseCouncilPhone. \defenseCouncilmail.
 
 \vspace{0.008\paperheight plus1fill}
 \noindent%
@@ -125,7 +126,8 @@ r
     \defenseSecretaryRegalia
     &
     \ifnumequal{\value{showsecrsign}}{0}{}{%
-        \includegraphics[width=2cm]{secretary-signature.png}%
+%        \includegraphics[width=2cm]{secretary-signature.png}%
+        \includegraphics[width=2cm]{Secretary-signature_Varepo.JPG}
     }%
     &
     \defenseSecretaryFio
