--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -94,11 +94,11 @@
 
 @InProceedings{васеева2019сравнительный,
   author    = {Васеева, ТВ and Альтман, ЕА and Елизаров, ДА},
-  title     = {Сравнительный анализ методов определения параметров гармоник сигнала электрической сети},
   booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  title     = {Сравнительный анализ методов определения параметров гармоник сигнала электрической сети},
   year      = {2019},
   pages     = {261--267},
-  keywords  = {качество электрической энергии, гармоники, интергармоники, оконная функция },
+  keywords  = {качество электрической энергии, гармоники, интергармоники, оконная функция},
   url       = {https://elibrary.ru/download/elibrary_37530330_61900460.pdf},
 }
 
@@ -112,11 +112,11 @@
 
 @InProceedings{васеева2019,
   author    = {Васеева, ТВ and Альтман, ЕА and Александров, АВ},
-  title     = {Сравнительный анализ применения алгоритмов определения частоты при оценке гармоник в электрических сетях},
   booktitle = {Системы управления, информационные технологии и математическое моделирование},
+  title     = {Сравнительный анализ применения алгоритмов определения частоты при оценке гармоник в электрических сетях},
   year      = {2019},
   pages     = {61--66},
-  keywords  = {цифровая обработка сигналов, качество электрической энергии, гармоники, алгоритмы, Быстрое Преобразование Фурье },
+  keywords  = {цифровая обработка сигналов, качество электрической энергии, гармоники, алгоритмы, Быстрое Преобразование Фурье},
   url       = {https://elibrary.ru/download/elibrary_38249025_91173531.pdf},
 }
 
@@ -131,11 +131,11 @@
 
 @Article{васееваисследование,
   author   = {Васеева, Татьяна Валериевна and Альтман, Евгений Анатольевич},
-  title    = {Исследование точности математических моделей алгоритмов реализованных на языках высокого уровня},
   journal  = {Информационные и управляющие системы на транспорте и в},
+  title    = {Исследование точности математических моделей алгоритмов реализованных на языках высокого уровня},
   year     = {2018},
   pages    = {236--243},
-  keywords = {быстродействия алгоритмов, временные затраты, свертка },
+  keywords = {быстродействия алгоритмов, временные затраты, свертка},
   url      = {https://elibrary.ru/download/elibrary_35626656_49101388.pdf},
 }
 
@@ -160,20 +160,20 @@
 
 @Article{Васеева2017,
   author   = {Васеева, Татьяна Валериевна and Александров, Александр Владимирович},
-  title    = {Реализация алгоритмов вычисления корреляции для диагностирования подвижного состава методами корреляционного анализа},
   journal  = {ТЕХНОЛОГИЧЕСКОЕ ОБЕСПЕЧЕНИЕ РЕМОНТА И ПОВЫШЕНИЕ ДИНАМИЧЕСКИХ КАЧЕСТВ ЖЕЛЕЗНОДОРОЖНОГО ПОДВИЖНОГО СОСТАВА},
+  title    = {Реализация алгоритмов вычисления корреляции для диагностирования подвижного состава методами корреляционного анализа},
   year     = {2017},
-  keywords = {корреляционный анализ, коэффициент корреляции, корреляция },
+  keywords = {корреляционный анализ, коэффициент корреляции, корреляция},
   url      = {https://elibrary.ru/download/elibrary_32167635_26178414.pdf},
 }
 
 @InProceedings{терентьева2017алгоритм,
   author    = {Терентьева, АВ and Васеева, ТВ and Кильдибеков, АБ},
-  title     = {Алгоритм детектирования лиц в различных ракурсах и наклонах},
   booktitle = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  title     = {Алгоритм детектирования лиц в различных ракурсах и наклонах},
   year      = {2017},
   pages     = {250--255},
-  keywords  = {компьютерное зрение, алгоритмы распознавания лиц, библиотека opencv, метод виолы-джонса, каскады хаара, мобильное приложение, зеркало, python },
+  keywords  = {компьютерное зрение, алгоритмы распознавания лиц, библиотека opencv, метод виолы-джонса, каскады хаара, мобильное приложение, зеркало, python},
   url       = {https://elibrary.ru/download/elibrary_29370837_30585305.pdf},
 }
 
@@ -188,13 +188,13 @@
 
 @Article{альтман2017применение,
   author    = {Альтман, Евгений Анатольевич and Захаренко, Елена Игоревна and Васеева, Татьяна Валериевна},
-  title     = {Применение метода разложения двумерной свертки при реализации цифровых фильтров},
   journal   = {Научный вестник Новосибирского государственного технического университета},
+  title     = {Применение метода разложения двумерной свертки при реализации цифровых фильтров},
   year      = {2017},
   number    = {4},
   pages     = {95--104},
   doi       = {10.17212/1814-1196-2017-4-95-104},
-  keywords  = {двумерная свертка, корреляция, цифровой фильтр, обработка изображений, быстрые алгоритмы, оценка эффективности, ядро фильтра, цифровой сигнал },
+  keywords  = {двумерная свертка, корреляция, цифровой фильтр, обработка изображений, быстрые алгоритмы, оценка эффективности, ядро фильтра, цифровой сигнал},
   publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
   url       = {https://journals.nstu.ru/vestnik/catalogue/contents/view_article?id=15526},
 }
@@ -475,7 +475,7 @@
 
 @Online{CIRED,
   title   = {International conference on electricity distribution},
-  url     = {https://site.ieee.org/pes-pq/},
+  url     = {http://www.cired.net/},
   urldate = {2019-12-07},
 }
 
@@ -963,6 +963,26 @@
   title   = {Voltage characteristics of electricity supplied by public distribution systems},
   journal = {European Committee for Electrotechnical Standardization (CENELEC)},
   year    = {1999},
+}
+
+@Article{лютаревич2013вопросы,
+  author    = {Лютаревич, Александр Геннадьевич and Горюнов, Владимир Николаевич and Долингер, Станислав Юрьевич and Хацевич, Константин Владимирович},
+  journal   = {Омский научный вестник},
+  title     = {Вопросы моделирования устройств обеспечения качества электрической энергии},
+  year      = {2013},
+  number    = {1(117},
+  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~...},
+  url       = {https://cyberleninka.ru/article/n/voprosy-modelirovaniya-ustroystv-obespecheniya-kachestva-elektricheskoy-energii},
+}
+
+@Article{планков2013учет,
+  author    = {Планков, АА},
+  journal   = {Современные проблемы науки и образования},
+  title     = {Учет высших гармоник при исследовании динамической устойчивости узлов электроэнергетических систем с асинхронной нагрузкой},
+  year      = {2013},
+  number    = {5},
+  pages     = {23--23},
+  publisher = {Общество с ограниченной ответственностью" Издательский Дом" Академия~…},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
