--- a/common/data.tex
+++ b/common/data.tex
@@ -40,7 +40,7 @@
 {\todo{НазУчДисРаб}}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{<<Омском государственном университете путей сообщения>>}
+{<<федеральном государственном бюджетном образовательном учреждении высшего профессионального образования «Омский государственный университет путей сообщения (ОмГУПС (ОмИИТ)>>}
 
 %% \newcommand{\supervisorDead}{}           % Рисовать рамку вокруг фамилии
 \newcommand{\supervisorFio}              % Научный руководитель, ФИО
@@ -90,29 +90,30 @@
 %% {\todo{старший научный сотрудник}}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки. Удалить, чтобы не отображать в автореферате
-{\todo{Федеральное государственное бюджетное образовательное учреждение высшего
-профессионального образования с~длинным длинным длинным длинным названием}}
+{\todo{Омский научно-исследовательский институт приборостроения (АО «ОНИИП»)}}
 
 \newcommand{\defenseDate}              % Защита, дата
-{\todo{DD mmmmmmmm YYYY~г.~в~XX часов}}
+{\todo{18 декабря 2021~г.~в~15 часов}}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
-{\todo{Д\,123.456.78}}
+{\todo{Д\,212.178.15}}				   %05.13.18 – Математическое моделирование, численные методы и комплексы программ (технические науки).
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
-{\todo{Название учреждения}}
+{\todo{Омском государственном техническом университете}}
 \newcommand{\defenseCouncilAddress}    % Защита, адрес учреждение диссертационного совета
-{\todo{Адрес}}
+{\todo{г.~Омск, проспект~Мира, 11}}
 \newcommand{\defenseCouncilPhone}      % Телефон для справок
-{\todo{+7~(0000)~00-00-00}}
+{\todo{+7~(3812)~65-64-92}}
+\newcommand{\defenseCouncilmail}    
+ {\todo{E-mail:~dissov\_omgtu@omgtu.ru}}                      %e-mail
 
 \newcommand{\defenseSecretaryFio}      % Секретарь диссертационного совета, ФИО
-{\todo{Фамилия Имя Отчество}}
+{\todo{Варепо Лариса Григорьевна}}
 \newcommand{\defenseSecretaryRegalia}  % Секретарь диссертационного совета, регалии
-{\todo{д-р~физ.-мат. наук}}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
+{\todo{доктор технических наук, доцент}}            % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
 
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
-{\todo{Название библиотеки}}
+{\todo{Омского государственного технического университета}}
 \newcommand{\synopsisDate}             % Автореферат, дата рассылки
-{\todo{DD mmmmmmmm YYYY года}}
+{\todo{23 июля 2021 года}}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%            % Ключевые слова для метаданных PDF диссертации и автореферата
